// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MKAlertRoot renders with custom color 1`] = `
<div
  className="MuiBox-root css-opofj1"
  onClick={[MockFunction]}
>
  Hello!
</div>
`;

exports[`MKAlertRoot renders without custom color 1`] = `
<div
  className="MuiBox-root css-16qid04"
  onClick={[MockFunction]}
>
  Hello!
</div>
`;
